--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <div id="greeting">
       <h1>Hello World!</h1>
     </div>
+    <div id="gifs">
+      
+    </div>
 
     <!-- DEV MODE -->
     <script src="jspm_packages/system.js"></script>
