--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
     <!-- DEV MODE -->
     <script src="jspm_packages/system.js"></script>
+    <script src="jspm_packages/babel-polyfill.js"></script>
     <script src="config.js"></script>
     <script>
       System.import('lib/main')
-    </script>
-
+    </script> 
+    
     <!-- PRODUCTION MODE -->
     <!-- to generate build.js, run: jspm bundle-sfx --minify lib/main -->
-    <!--
-    <script src="jspm_packages/traceur-runtime.js"></script>
-    <script src="build.js"></script>
-    -->
+    <!-- <script src="jspm_packages/babel.js"></script>
+    <script src="jspm_packages/babel-polyfill.js"></script>
+    <script src="build.js"></script> --> 
   </body>
 </html>
