--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
       <h1>Hello World!</h1>
     </div>
     <div id="gifs">
-      
+
     </div>
 
-    <!-- DEV MODE -->
+    <script src="/node_modules/babel/node_modules/babel-core/browser-polyfill.min.js"></script>
+    <script src="bundle.js"></script>
+
+    <!-- jspm
     <script src="jspm_packages/system.js"></script>
-    <script src="jspm_packages/babel-polyfill.js"></script>
     <script src="config.js"></script>
     <script>
       System.import('lib/main')
-    </script> 
-    
-    <!-- PRODUCTION MODE -->
-    <!-- to generate build.js, run: jspm bundle-sfx --minify lib/main -->
-    <!-- <script src="jspm_packages/babel.js"></script>
-    <script src="jspm_packages/babel-polyfill.js"></script>
-    <script src="build.js"></script> --> 
+    </script>
+    -->
   </body>
 </html>
