removed jspm and added browserify/npm workflow
- Coudn't get jspm to work again , switching to browserify/npm

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
 
     </div>
 
-    <script src="/node_modules/babel/node_modules/babel-core/browser-polyfill.min.js"></script>
+	<!-- Dev -->
     <script src="bundle.js"></script>
 
-    <!-- jspm
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script>
-      System.import('lib/main')
-    </script>
-    -->
+	<!-- Prod -->
+	<!-- <script src="dist/index.min.js"></script> -->
+
   </body>
 </html>
